--- a/style.css
+++ b/style.css
@@ -16,6 +16,16 @@ h2{
 marquee{
     color: yellow;
 }
+.lista{
+    width: 100%;
+    height: 48%;
+    overflow: hidden;
+}
+.paginas IMG{
+    width: 100%;
+    height: auto;
+}
+
 @media only screen and (max-width: 4000px){
     header{
         width:99.5%;
@@ -69,8 +79,9 @@ marquee{
         font-family: Georgia, 'Times New Roman', Times, serif;
         font-size: 14pt;
     }
+
     #arriba{
-        height: 50.5%;
+        height: 34%;
         width: 100%;
         float: left;
         display: block;
@@ -99,7 +110,27 @@ marquee{
         height:auto;
         width: 100%;
     }
-       
+    
+    .paginas{
+        height: 60%;
+        width: 30%;
+        float: left;
+        display: block;
+        overflow: hidden;
+        border-radius: 3px;
+        border: 1px solid #ccc;
+        transition: 300ms;
+    }
+    .paginas:hover{
+        border: 1px solid #eeee00;
+    }
+    .nombre{
+        height: auto;
+        margin-top: 1%;
+        margin-bottom: 1%;
+        text-align: center;
+        font-size: 18pt;
+    }
 }
 
 @media only screen and (max-width: 823px){
@@ -137,6 +168,21 @@ marquee{
         font-size: 10pt;
         text-align: left;
     }
+    .nombre{
+        font-size: 9pt;
+    }
+}
+
+@media only screen and (max-width: 770px){
+    #arriba{
+        height: 24%;
+    }
+    .paginas{
+        height:37%;
+    }
+    #arriba{
+        margin-top: -4%;
+    }
 }
 @media only screen and (max-width: 570px){
     #arriba{
@@ -144,6 +190,10 @@ marquee{
     }
     p{
         font-size: 8pt;
+    }
+    .paginas{
+        height: 47%;
+        width: 40%;
     }
 }
 
@@ -163,6 +213,11 @@ marquee{
         font-size: 13pt;
         font-family: 'Times New Roman', Times, serif;
         text-align: left;
+    }
+    
+    .paginas{
+        height: 47%;
+        width: 47%;
     }
 }    
 
@@ -187,7 +242,7 @@ marquee{
         top: 7%;
     }
     #arriba{
-        height: 75%;
+        height: 60%;
         top: 0.4%;
         overflow: auto;
     }
@@ -205,14 +260,30 @@ marquee{
         font-family: 'Times New Roman', Times, serif;
         text-align: left;
     }
-    @media only screen and (max-width: 280px){
-        .enlaces{
-            font-size: 18pt;
-        }
-        .div-imagen{
-            width: 45%;
-            height: auto;   
-        }
-
+    .paginas{
+        height: 40%;
+    }
+}
+@media only screen and (max-width: 360px){
+    #arriba{
+        height: 75%;
+        top: 0.4%;
+        overflow: auto;
+    }
+}
+@media only screen and (max-width: 280px){
+    .enlaces{
+        font-size: 18pt;
+    }
+    .div-imagen{
+        width: 45%;
+        height: auto;   
+    }
+        
+    .paginas{
+        margin: auto;
+        float: none;
+        height: 60%;
+        width: 87%;
     }
 }
