--- a/style.css
+++ b/style.css
@@ -96,7 +96,7 @@ marquee{
     }
     .div-imagen{
         height: 90%;
-        width: 19%;
+        width: auto;
         float: left;
         display: block;
         top: 0%;
@@ -107,8 +107,8 @@ marquee{
         overflow: hidden;
     }
     .imagen{
-        height:auto;
-        width: 100%;
+        height:100%;
+        width: auto;
     }
     
     .paginas{
@@ -167,7 +167,7 @@ marquee{
     }
     .div-imagen{
         height: 84.5%;
-        width: 20%;
+        width: auto;
         position: relative;
         margin-right: 2%;
     }
@@ -228,8 +228,8 @@ marquee{
         height:6.5%;
     }
     .div-imagen{
-        height: auto;
-        width: 35%;
+        height: 47%;
+        width: auto;
     }
 }
 
@@ -252,7 +252,7 @@ marquee{
         float: left;
         display: block;
         height: 40%;
-        width: 42%;
+        width: auto;
         overflow: hidden;
         margin-bottom: 0%;
         margin-right: 1.7%;
@@ -275,8 +275,8 @@ marquee{
         font-size: 18pt;
     }
     .div-imagen{
-        width: 45%;
-        height: auto;   
+        width: auto;
+        height: 40%;   
     }
         
     .paginas{
