--- a/style.css
+++ b/style.css
@@ -18,7 +18,7 @@ marquee{
 }
 .lista{
     width: 100%;
-    height: 48%;
+    height: max-content;
     overflow: hidden;
 }
 .paginas IMG{
@@ -91,7 +91,7 @@ marquee{
         right: 0%;
     }
     p{
-        font-size: 16pt;
+        font-size: 20pt;
         text-align:left;
     }
     .div-imagen{
@@ -112,7 +112,7 @@ marquee{
     }
     
     .paginas{
-        height: auto;
+        height: max-content;
         width: 30%;
         float: left;
         display: block;
