overflow auto en genericos por problemas de debug

--- a/style.css
+++ b/style.css
@@ -89,6 +89,7 @@ marquee{
         left: 0%;
         bottom: 1%;
         right: 0%;
+        overflow: auto;
     }
     p{
         font-size: 18pt;
